--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,14 +7,35 @@
   - name: Playbook is updating cached repository index
     apt:
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
-  - name: Playbook is installing apahe2 package
+  - name: Playbook is installing apache2 package
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution == "Ubuntu"
 
-  - name: Playbook is installing PHP support for Apahe
+  - name: Playbook is installing PHP support for Apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution == "Ubuntu"
 
+#
+
+  - name: Playbook is updating cached repository index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "Rocky"
+
+  - name: Playbook is installing apache2 package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "Rocky"
+
+  - name: Playbook is installing PHP support for Apache
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "Rocky"
