Minor corrections to apache install scripts

--- a/install_apache-1.yml
+++ b/install_apache-1.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
 
-# Ubuntu
+# Ubuntu and Rocky
   - name: Playbook is installing apache2 and php packages
     package:
       name:
