--- a/site.yml
+++ b/site.yml
@@ -6,6 +6,7 @@
 
 # Ubuntu
   - name: Playbook is installing Updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -13,6 +14,7 @@
 
 # Rocky
   - name: Playbook is installing Updates (Rocky)
+    tags: always
     dnf:
       update_only: yes 
       update_cache: yes
@@ -25,6 +27,7 @@
 
 # Ubuntu
   - name: Playbook is installing apache2 and php packages (Ubuntu)
+    tags: apache,apache2,ubuntu
     apt:
       name:
         - apache2
@@ -35,6 +38,7 @@
 
 # Rocky
   - name: Playbook is installing apache2 and php packages (Rocky)
+    tags: apache,rocky,httpd
     dnf:
       name:
         - httpd
@@ -49,12 +53,14 @@
   tasks:
 
   - name: Playbook is installing mariadb package (Rocky)
+    tags: rocky,db,mariadb
     dnf:
       name: mariadb
       state: latest
     when: ansible_distribution == "Rocky"
 
   - name: Playbook is installing mariadb package (Ubuntu)
+    tags: db,mariadb,ubuntu
     apt:
       name: mariadb-server
       state: latest
@@ -66,6 +72,7 @@
   tasks:
 
   - name: Playbook is installing samba package
+    tags: samba
     package:
       name: samba
       state: latest
