--- a/site.yml
+++ b/site.yml
@@ -47,6 +47,16 @@
       update_cache: yes
     when: ansible_distribution == "Rocky"
 
+# Copy default_site html file over
+  - name: copy default html file for site
+    tags: apache,apache2,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 # DB SERVERS
 - hosts: db_servers
   become: true
